tests/lean/matchLeftovers.lean.expected.out
matchLeftovers.lean:5:17-5:21: error: unsolved goals
a b : Nat
⊢ Nat
matchLeftovers.lean:9:14-9:18: error: unsolved goals
x : Nat × Nat
a b : Nat
h : (a, b).fst > 0
⊢ f (a, b) > 0
matchLeftovers.lean:16:17-16:21: error: unsolved goals
x a b : Nat
⊢ Nat
matchLeftovers.lean:25:32-25:36: error: unsolved goals
α : Type ?u
n : Nat
a : α
i n✝ : Nat
h : i + 1 < n✝ + 1 + 1
x : α
xs : Vector' α n✝
⊢ Vector' α (n✝ + 1 + 1)
